--- a/.github/workflows/deployment-merge.yml
+++ b/.github/workflows/deployment-merge.yml
@@ -41,13 +41,18 @@ jobs:
           count=$(curl -s
           -H "Accept: application/vnd.github.v3+json"
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
-          https://api.github.com/repos/cvle/nextjs2/branches/vla/protection |
+          https://api.github.com/repos/cvle/nextjs2/branches/production/protection |
           jq ".required_pull_request_reviews.required_approving_review_count" -M);
           echo "::set-output name=count::$count"
       - run: echo ${{ steps.required_review.outputs.count }}
       - # Check for required reviews
-        if: ${{ steps.reviews.outputs.approved < env.MIN_REVIEWS || steps.reviews.outputs.changes_requested > 0 }}
-        run: echo "At least $MIN_REVIEWS approval are required and no change request is allowed" && exit 1
+        if: |-
+          ${{
+            steps.required_review.outputs.count != "null" &&
+            steps.reviews.outputs.approved < steps.required_review.outputs.count ||
+            steps.reviews.outputs.changes_requested > 0 
+          }}
+        run: echo "At least ${{ steps.required_review.outputs.count }} approval are required and no change request is allowed" && exit 1
 
       # Prepare git
       - name: Checkout production branch
